# nanoGPT

./: .gitignore  model.py  play.py  pyproject.toml  sample.py  train.py
config/: train_copy.py  train_shakespeare_char.py
copy-experiments/: claude.md  results.md
data/copy/: generate_dataset.py  input.txt  prepare.py
data/shakespeare/: prepare.py
data/shakespeare_char/: aim.txt  prepare.py
