[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoGPT"
version = "0.1.0"
description = "A small GPT model implementation in PyTorch"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sudhanshu Garg", email = "noreply@github.com"}
]
keywords = ["gpt", "transformer", "language-model", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "tiktoken>=0.5.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/sudhanshugarg/nanoGPT"
Repository = "https://github.com/sudhanshugarg/nanoGPT.git"

[tool.setuptools]
packages = []
py-modules = ["train", "sample", "bench", "play", "configurator", "model"]
